Add python implementation and start constructing the endpoints to get the information of the scan

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,12 +56,15 @@ services:
 
   fastapi:
     build:
-        context: ./fastapi
+        context: ./fastapi  # Make sure this is pointing to the correct directory
     container_name: webreconx_fastapi
+    volumes:
+      - ./fastapi:/app  # Mount the local `fastapi` directory to `/app` in the container
     expose:
-      - "8000"
+        - "8000"
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload  # Enable live reload
     networks:
-      - internal_network
+        - internal_network
 
 networks:
   internal_network:
