build: :building_construction: Installing Mongo

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ DB_DATABASE=webreconx_db
 DB_USERNAME=root
 DB_PASSWORD=webreconx
 
+MONGODB_URI=mongodb://webreconx_mongo:27017
+MONGODB_DATABASE=webreconx_db
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
