--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FASTAPI_URI=
+USE_IA=false
+OPENIA_API_KEY=
