--- a/docker/nginx/conf.d/site.conf
+++ b/docker/nginx/conf.d/site.conf
@@ -12,6 +12,12 @@ server {
 
     client_max_body_size 50M;
 
+    # Timeout settings
+    proxy_read_timeout 9999s;
+    proxy_connect_timeout 9999s;
+    proxy_send_timeout 9999s;
+    fastcgi_read_timeout 9999s;
+
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
